[gd_scene load_steps=12 format=3 uid="uid://cebj1kmyheyfo"]

[ext_resource type="Script" uid="uid://dgwos6vhwivh5" path="res://Scenes/Main UI/main_menu.gd" id="1_6823k"]
[ext_resource type="Texture2D" uid="uid://hsh2db5411ce" path="res://Scenes/Main UI/huDiDyr.jpg" id="1_fu7sn"]
[ext_resource type="Texture2D" uid="uid://bwpxu2im0u3fa" path="res://Scenes/Main UI/R.png" id="3_jix8l"]
[ext_resource type="Shader" uid="uid://cus7e6j1orgd4" path="res://Scenes/Main UI/scroll.gdshader" id="3_nlkkf"]
[ext_resource type="FontFile" uid="uid://bj2l3x1odioq5" path="res://Fonts/MorrisRoman-Black.ttf" id="5_nlkkf"]
[ext_resource type="FontFile" uid="uid://nga1c3pwfxto" path="res://Fonts/Dunwich_Ink.otf" id="6_1gk53"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dy7ct"]
shader = ExtResource("3_nlkkf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glbon"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlkkf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qe12f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qtwp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6823k")

[node name="MainBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fu7sn")
expand_mode = 2

[node name="Pattern" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_dy7ct")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_jix8l")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -285.0
offset_right = 105.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nlkkf")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_glbon")
text = "Start Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nlkkf")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_nlkkf")
text = "Options"

[node name="Extras" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nlkkf")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_qe12f")
text = "Extras"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nlkkf")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_8qtwp")
text = "Quit"

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -296.5
offset_top = 50.0
offset_right = 296.5
offset_bottom = 200.0
grow_horizontal = 2
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 22
theme_override_fonts/font = ExtResource("6_1gk53")
theme_override_font_sizes/font_size = 150
text = "Runeguard"
horizontal_alignment = 1

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = -103.0
offset_right = 167.0
offset_bottom = -80.0
grow_vertical = 0
text = "version: 0.0.0"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Extras" to="." method="_on_extras_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
